Makefile: introduce Makefile.local
Ignore-this: 5f665deb09922c9e0e5fcfff5e5f16b2

darcs-hash:20110422155024-da4f2-b4002c688e880bf13d796fd2c9dc6aa49fbc24a2

--- a/README
+++ b/README
@@ -19,6 +19,8 @@ very stable API.
   * deriving-ocsigen (see: https://github.com/hnrgrgr/deriving)
 
 === Installation ===
+
+  * edit {{{Makefile.local}}} to change the default configuration
   * run {{{make}}} to compile
   * run {{{make install}}} as root to install the compiler
     and its libraries
