--- a/README
+++ b/README
@@ -20,7 +20,7 @@ very stable API.
 
 === Installation ===
 
-  * edit {{{Makefile.local}}} to change the default configuration
+  * edit {{{Makefile.conf}}} to change the default configuration
   * run {{{make}}} to compile
   * run {{{make install}}} as root to install the compiler
     and its libraries
