Update CHANGES and VERSION
Ignore-this: bbf98e3397557bd7701022de92e75de0

darcs-hash:20110715143227-da4f2-7d8664d2856e7833cf6ca1d339ced6209f41dd68

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,14 @@
+===== 1.0.3 (2011-17-13) =====
+
+ * Bugfixes:
+   ** 'caml_int_of_string' was incorrect for negative number
+   ** Fixed misparenthesized Javascript 'new' expressions
+ * Libraries:
+   ** Add a CSS module
+   ** export Form.form_elements
+   ** add onsubmit method to Dom_html.formElement
+   ** add classList property to dom elements
+
 ===== 1.0.2 (2011-04-13) =====
 
  * Bugfixes:
