--- a/doc/manual-wiki/menu.wiki
+++ b/doc/manual-wiki/menu.wiki
@@ -1,10 +1,11 @@
-=[[intro|Introduction]]
-=[[overview|Overview]]
-=[[library|Library overview]]
-=[[performances|Performances]]
-=Examples
-==<<a_file src="toplevel/index.html"|An OCaml toplevel running in the browser>>
-==<<a_file src="planet/index.html" |An animated 3D view of the Earth>>
-==<<a_file src="graph/index.html" |A graph viewer>>
-==[[boulderdash|A Boulder Dash game]]
-==[[wiki|A realtime wiki editor]]
+=Js_of_ocaml
+==[[intro|Introduction]]
+==[[overview|Overview]]
+==[[library|Library overview]]
+==[[performances|Performances]]
+==Examples
+===<<a_file src="toplevel/index.html"|An OCaml toplevel running in the browser>>
+===<<a_file src="planet/index.html" |An animated 3D view of the Earth>>
+===<<a_file src="graph/index.html" |A graph viewer>>
+===[[boulderdash|A Boulder Dash game]]
+===[[wiki|A realtime wiki editor]]
