--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+===== 1.0.5 (2011-09-21) =====
+
+ * Bugfixes:
+   ** array_get/set bound check
+ * Libraries:
+   ** XmlHttpRequest: allow to cancel ta XHR after receiving the HTTP headers
+   ** Added the [CSS.Angle] module to handle angles in CSS
+
 ===== 1.0.4 (2011-09-07) =====
 
  * Bugfixes:
