Update CHANGES and VERSION
Ignore-this: 73e5c8b32cf8a2c12191d0dedae281d8

darcs-hash:20110928164621-da4f2-69d0eb75a747b9d99501248b541afd68a7e9eab8

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+===== 1.0.6 (2011-09-28) =====
+
+ * Bugfixes:
+   ** browser compatility for Regexp.search and check_headers (XmlHttpRequest.send).
+ * Libraries:
+   ** add Dom_html.iFrameEliom##width
+   ** add Dom_html.window##scroll
+   ** add Dom.document##importNode
+
 ===== 1.0.5 (2011-09-21) =====
 
  * Bugfixes:
