Libraries: add functions to downcast Dom_html.event into mouseEvent, keyboardEvent, ...
Ignore-this: 5f236aba7cf819260ced3fa042b8b4af

darcs-hash:20111006171929-da4f2-d344133c027b1130ddbdbbf33cc93034cadb21da

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 
  * Libraries:
    ** Add Dom_html.buttonPressed
+   ** Add functions to downcast Dom_html.event into mouseEvent, keyboardEvent, ...
 
 ===== 1.0.6 (2011-09-28) =====
 
