Deriving_json: fix string (un)marshalling (was broken for byte > 127)
Ignore-this: 97d0271e89205f24b526333cf95e98d8

Given that JSON must be valid UTF-8 and that OCaml string are just a
sequence of byte we need to "embed" byte string in an UTF-8
sequence. Each byte af an OCaml string is considered as Unicode code
point (< 256) and then encoded in UTF-8. Hence, bytes greater than 127
are "wrapped" in two bytes.

darcs-hash:20111114103442-da4f2-d1d26a6e33e6a5f0d8b05447ad45cf48fdc32314

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 ===== Dev =====
 
+ * Bugfixes:
+   ** Deriving_json: fix string (un)marshalling (was broken for byte > 127)
  * Libraries:
    ** Add Dom_html.buttonPressed
    ** Add functions to downcast Dom_html.event into mouseEvent, keyboardEvent, ...
