Update Pa_deriving_Json to the new code generator of deriving.
Ignore-this: e8936be88da10d20c54aa17ac9376a1e

darcs-hash:20111121174326-da4f2-6e427b02ed439e0d3cb1873f62fc06b0fe3c7e3e

--- a/README
+++ b/README
@@ -16,7 +16,8 @@ very stable API.
   * Lwt (**version 2.3.0** at least)
 
   [optionnal]
-  * deriving-ocsigen (see: https://github.com/hnrgrgr/deriving)
+  * deriving-ocsigen (**version 0.3.0 at least**
+                      see: https://github.com/hnrgrgr/deriving)
 
 === Installation ===
 
