Update README and CHANGES
Ignore-this: beff4e9bad38ee2cc5335a6bd124c52e

darcs-hash:20111125173635-da4f2-f1904f10d671ebacf33f75ecfc2e9ec67c4024bf

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
-===== Dev =====
+===== 1.0.8 (2011-11-25) =====
+
+ * Compatibility with deriving-0.3
+ * Libraries:
+   ** Adding Event_arrows.iter
+   ** Events: adding Dom_html.stopPropagation and ?propagate parameter in Event_arrows
 
 ===== 1.0.7 (2011-11-18) =====
 
