Updates CHANGES and VERSION (1.0.9)
Ignore-this: e5cda18778ad9bfea3c3c80340446f01

darcs-hash:20111130142326-da4f2-01105ae87c14808e01255d5a3e52a6373dc8cfce

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+===== 1.0.9 (2011-11-30) =====
+
+ * Bugfixe in polymorphic comparison.
+
 ===== 1.0.8 (2011-11-25) =====
 
  * Compatibility with deriving-0.3
