Regexp: always set the 'global' flag.
Ignore-this: 154a9167edb3418d00ff12ac254a9898

darcs-hash:20111208155906-da4f2-66438d97e53287d446dbd99b1e55eda9610407ad

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+===== dev =====
+
+ * Libraries:
+ ** Regexp: Fix efficacity problem
+
 ===== 1.0.9 (2011-11-30) =====
 
  * Bugfixe in polymorphic comparison.
