Dom: add compareDocumentPosition
Ignore-this: 870fa19ea42db4037eebaff025cb7647

darcs-hash:20111209171722-0cb73-15d3f5c1c6763b81b3fb43575e81cbc4699c4a44

--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
  * Libraries:
  ** Regexp: Fix efficacity problem
  ** Dom_html: Add querySelector
+ ** Dom: Add compareDocumentPosition
 
 ===== 1.0.9 (2011-11-30) =====
 
