Dom_html: circumvent problem with ie event handling
Ignore-this: a0f1e735cd90f85fbd51e4f8d392582a

darcs-hash:20111215182924-0cb73-cd9ca777bd20b00934e42818aa52bd26dc2f7d10

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 
  * Libraries:
  ** Regexp: Fix efficacity problem
+ ** Dom_html: Fix problems with IE8 event handling
  ** Dom_html: Add querySelector
  ** Dom: Add compareDocumentPosition
 
