Doc: use iframe for examples (boulderdash and wiki)
Ignore-this: 4970216018b1e3d830ee07ba93befbd

darcs-hash:20111221180103-da4f2-d427e2b927fecd489ef93ed13ca6c35969f4710d

--- a/doc/manual-wiki/wiki.wiki
+++ b/doc/manual-wiki/wiki.wiki
@@ -1,5 +1,3 @@
 == Realtime wiki syntax parsing ==
 
-<<a_script src="wiki/wiki.js">>
-Type you text here:
-<<div id="wiki_demo"|>>
+<<a_iframe src="wiki/wiki.js">>
