--- a/doc/manual-wiki/menu.wiki
+++ b/doc/manual-wiki/menu.wiki
@@ -1,5 +1,4 @@
 =Js_of_ocaml
-==[[intro|Introduction]]
 ==[[overview|Overview]]
 ==[[library|Library overview]]
 ==[[performances|Performances]]
@@ -7,5 +6,5 @@
 ===<<a_file src="toplevel/index.html"|An OCaml toplevel running in the browser>>
 ===<<a_file src="planet/index.html" |An animated 3D view of the Earth>>
 ===<<a_file src="graph/index.html" |A graph viewer>>
-===[[boulderdash|A Boulder Dash game]]
-===[[wiki|A realtime wiki editor]]
+===<<a_file src="boulderdash/index.html" |A Boulder Dash game>>
+===<<a_file src="wiki/index.html" |A realtime wiki editor>>
