Doc: add a few lines about debugging programs (-noinline -pretty)
Ignore-this: 4bd018d2e5d2cd43cf6091aded579258

darcs-hash:20120202094937-d035b-537a939891bebf0ac3e4f08fb9c5fb19c5750444

--- a/doc/manual-wiki/overview.wiki
+++ b/doc/manual-wiki/overview.wiki
@@ -71,3 +71,9 @@ different from usual:
 |    lib/        |   library for interfacing with Javascript APIs   |
 |    runtime/    |   runtime system                                 |
 
+
+== Debugging programs ==
+
+To help debugging your programs, use the "-pretty" and "-noinline"
+options of Js_of_ocaml. If the bytecode is build with ocaml "-g"
+option, Js_of_ocaml will attempt to preserve variable names as well.
