example: add webgl demo to menu.wiki
Ignore-this: a31dd6f0fb78958489a52abce46ac7e

darcs-hash:20120308131918-0cb73-4b06aa9cce7060401fab098cc39fcdf511ef409f

--- a/doc/manual-wiki/menu.wiki
+++ b/doc/manual-wiki/menu.wiki
@@ -9,3 +9,4 @@
 ===<<a_file src="graph/index.html" |A graph viewer>>
 ===<<a_file src="boulderdash/index.html" |A Boulder Dash game>>
 ===<<a_file src="wiki/index.html" |A realtime wiki editor>>
+===<<a_file src="webgl/index.html" |A webgl demo>>
