Update CHANGES and VERSION
Ignore-this: 65ca401f6a515fe870d7d9f51e0e675

darcs-hash:20120315152456-0cb73-b5f13f754be4ac4dab2e1ed18fe5ce11d723ebc5

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+===== 1.1.1 (2012-03-08) =====
+
+ * Bugfixes:
+   * Url parsing.
+   * webgl binding types
+
+ * webgl example
+
 ===== 1.1 (2012-02-24) =====
 
  * Libraries:
