--- a/doc/manual-wiki/library.wiki
+++ b/doc/manual-wiki/library.wiki
@@ -147,3 +147,42 @@ class or the {{{Pickle}}} class.
   <<a_api | module Deriving_Json >> for more information.
 * The {{{Pickle}}} class use a binary format as external
   representation and preserve sharings in the data representation.
+
+== Events ==
+
+Besides the functions provided by {{{Dom_html}}} to register event handlers
+(mainly <<a_api | val Dom_html.addEventListener >>)
+using the usual Javascript way, js_of_ocaml provides another module to
+program event handlers very easily and concisely, in the module
+<<a_api | module Lwt_js_events >>.
+
+This module defines functions you can call on a DOM element to create
+an Lwt thread that will return when the event occures.
+
+Example:
+
+{{{
+Lwt.ignore_result (Lwt_js_events.click target >>= handler);
+}}}
+
+The handler receives the JS event as parameter.
+
+Each of these functions has a version (same name with an ending "s")
+that loops when the handler terminates. Example:
+
+{{{
+Lwt.ignore_result (Lwt_js_events.clicks target handler);
+}}}
+
+To remove an event handler, cancel the Lwt threads using {{{Lwt.cancel}}}.
+It is also possible to use {{{Lwt.pick}}}.
+For example the following piece of code waits
+for a click on one of t1 or t2:
+
+{{{
+Lwt.pick [Lwt_js_events.click t1 >>= handler1;
+          Lwt_js_events.click t2 >>= handler2]
+}}}
+
+Look at the <<a_api text="API documentation" | module Lwt_js_events>> 
+for more information.
