Add a short note in doc for events with lwt
Ignore-this: 1a7ac214fdb0fc59f8aab83109b340b1

darcs-hash:20120714143831-c4e55-d92d6b164115e6821611663c8de3b43225695517

--- a/doc/manual-wiki/library.wiki
+++ b/doc/manual-wiki/library.wiki
@@ -184,5 +184,11 @@ Lwt.pick [Lwt_js_events.click t1 >>= handler1;
           Lwt_js_events.click t2 >>= handler2]
 }}}
 
+Warning: If you are using {{{Lwt.pick}}} and your handlers take time,
+be aware that other events listeners will not be cancelled
+before the handler has terminated. It is probably a better idea
+to return immediately after having launched the long handlers.
+
+
 Look at the <<a_api text="API documentation" | module Lwt_js_events>> 
 for more information.
