doc: adding examples to show how to call OCaml functions from JS
Ignore-this: 6e9c88192e8a11710ec32abebb91bfe0

darcs-hash:20120720113729-c4e55-0d4ca54978811d98fe9aed330a8c8c5ff06cd9e5

--- a/doc/manual-wiki/library.wiki
+++ b/doc/manual-wiki/library.wiki
@@ -131,6 +131,19 @@ You should use function {{{Js.wrap_callback}}} or function
 {{{Js.wrap_meth_callback}}} to wrap an OCaml function so that
 it can be called from Javascript.
 
+To call an OCaml function from Javascript, follow this example:
+{{{
+(Js.Unsafe.coerce Dom_html.window)##plop <- Js.wrap_callback f
+}}}
+
+Or, to create a JS object with OCaml methods:
+{{{
+(Js.Unsafe.coerce Dom_html.window)##plop <- 
+  Js.Unsafe.obj [| ("f", Js.wrap_meth_callback f);
+                   ("g", Js.wrap_meth_callback g) |]
+}}}
+
+
 == IO ==
 
 The <<a_api | module Json >> allows to marshall and unmarshall the
