--- a/doc/manual-wiki/library.wiki
+++ b/doc/manual-wiki/library.wiki
@@ -125,7 +125,7 @@ OCaml compiler accept the external declaration:
 You can call this function as if it was an OCaml function, as the
 Javascript function is appropriately wrapped by the system.
 
-=== Passing OCaml function to Javascript function ===
+=== Using OCaml functions from JS  ===
 
 You should use function {{{Js.wrap_callback}}} or function
 {{{Js.wrap_meth_callback}}} to wrap an OCaml function so that
@@ -146,7 +146,7 @@ Or, to create a JS object with OCaml methods:
 
 == IO ==
 
-The <<a_api | module Json >> allows to marshall and unmarshall the
+The <<a_api | module Json >> module allows to marshall and unmarshall the
 javascript representation of OCaml values into the corresponding JSON
 string. The unmarshalling is unsafe in the same way the OCaml
 {{{Marshall.from_string}}} function is.
