--- a/doc/manual-wiki/menu.wiki
+++ b/doc/manual-wiki/menu.wiki
@@ -1,6 +1,7 @@
 =Js_of_ocaml
 ==[[overview|Overview]]
 ==[[library|Library overview]]
+==[[bindings|Binding a JS library]]
 ==[[performances|Performances]]
 ==Examples
 ===<<a_file src="toplevel/index.html"|An OCaml toplevel running in the browser>>
