Fix bug in module Url: '+' where not unencoded to ' '
Ignore-this: b84d6ff8781e72ef450021216b52388f

darcs-hash:20121026131714-c4e55-d407497528057119897540461821266decff5646

--- a/doc/manual-wiki/bindings.wiki
+++ b/doc/manual-wiki/bindings.wiki
@@ -20,7 +20,7 @@ Be careful the function <<a_api | val Js.Unsafe.variable >> is not typed. Verify
 Example from the Js module:
 <<code language="ocaml"|
 let decodeURI (s : js_string t) : js_string t =
-  Unsafe.fun_call (Unsafe.variable "decodeURI") [|Unsafe.inject s|]
+  Js.Unsafe.fun_call (Js.Unsafe.variable "decodeURI") [|Js.Unsafe.inject s|]
 >>
 
 Have a look at the <<a_api | module Js.Unsafe >> module API.
