Doc: Fix a command-line (the syntax package is missing)
Ignore-this: 8263b8385f004de0097dea09c7ad3158

darcs-hash:20121109144558-a85e5-d2700cc64986fed15f040c682a3f973bbc9fff7d

--- a/doc/manual-wiki/overview.wiki
+++ b/doc/manual-wiki/overview.wiki
@@ -30,8 +30,8 @@ retargeted OCaml compiler, as the bytecode provides a very stable API.
   corresponding syntax extension, are provided by the
   {{{js_of_ocaml}}} package.
 {{{
-      ocamlfind ocamlc -package js_of_ocaml -syntax camlp4o -linkpkg \
-          -o cubes.byte cubes.ml
+      ocamlfind ocamlc -package js_of_ocaml -package js_of_ocaml.syntax \
+          -syntax camlp4o -linkpkg -o cubes.byte cubes.ml
 }}}
   Then, run the {{{js_of_ocaml}}} compiler to produce Javascript code:
 {{{
