--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,23 @@
+===== 1.3 (2012-11-28) =====
+
+ * Features/Changes
+ ** Runtime and toplevel updates to support OCaml 4.0
+ ** Add WebSocket bindings
+ ** Added -debuginfo option to output source code location information
+    (patch by Kensuke Matsuzaki)
+ ** Dom_html: added change, input and hashChange event bindings
+ ** Deriving_json: tail-recursive serialisation of lists (by Hugo Heuzard)
+
+ * Bugfixes
+ ** Fix array and string blitting with overlapping regions
+ ** Url module: fix encoding of '+'
+ ** Library: use 'this' instead of 'window' for better portability
+ ** Dom_html: fix creation of elements with type or name attribute
+    under IE 9
+ ** Compiler: small fix to bytecode parsing that could result in
+    incorrect generated code
+ ** Dom_html: fix mouse wheel event bindings
+ ** Dom: fix the type of item methods
 
 ===== 1.2 (2012-06-02) =====
 
