Deriving: fix parsing of float arrays and polymorphic variants (patch from Hugo Heuzard)
Ignore-this: 3e5b7d3d5c9ea7716ddc22b28a3af013

darcs-hash:20121205101805-c8b6b-d62307158c3e785f0b90aa639a835f632bbb77ad

--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,6 @@
  ** Added -debuginfo option to output source code location information
     (patch by Kensuke Matsuzaki)
  ** Dom_html: added change, input and hashChange event bindings
- ** Deriving_json: tail-recursive serialisation of lists (by Hugo Heuzard)
 
  * Bugfixes
  ** Fix array and string blitting with overlapping regions
@@ -18,6 +17,9 @@
     incorrect generated code
  ** Dom_html: fix mouse wheel event bindings
  ** Dom: fix the type of item methods
+ ** Deriving_json: tail-recursive serialisation of lists (by Hugo Heuzard)
+ ** Deriving_json: fix parsing of float arrays and polymorphic variants
+    (by Hugo Heuzard)
 
 ===== 1.2 (2012-06-02) =====
 
