--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,4 @@
+
 ===== 1.3 (2012-11-28) =====
 
  * Features/Changes
@@ -6,6 +7,7 @@
  ** Added -debuginfo option to output source code location information
     (patch by Kensuke Matsuzaki)
  ** Dom_html: added change, input and hashChange event bindings
+ ** Adding Lwt_js_events.async_loop and buffered_loop
 
  * Bugfixes
  ** Fix array and string blitting with overlapping regions
