--- a/doc/manual-wiki/library.wiki
+++ b/doc/manual-wiki/library.wiki
@@ -152,7 +152,7 @@ string. The unmarshalling is unsafe in the same way the OCaml
 {{{Marshall.from_string}}} function is.
 
 Type-safe unmarshalling may be achieved with the
-{{{deriving-ocsigen}}} library using either the optionnal {{{Json}}}
+{{{deriving}}} library using either the optionnal {{{Json}}}
 class or the {{{Pickle}}} class.
 
 * The {{{Json}}} class use a Json as external representation and do
