--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,41 @@
 
  * Features/Changes
  ** Add -linkall option to keep all provided primitives
+ ** Compiler: Add javascript file lookup using findlib
+    (+mypkg/myfile.js will read myfile.js from mypkg findlib directory)
+    (by Hugo Heuzard)
+ ** Compiler: Add compilation profiles -opt 1 (2 or 3)
+    (1 -> as before ; 2 -> loop until fixpoint ; 3 -> enable experimental optim 
+    (by Hugo Heuzard)
+ ** Compiler: Improve missing primitives & reserved name detection
+    (by Hugo Heuzard)
+ ** Compiler: Add variable renaming (Based on graph coloring)
+    can be enable with -enable shortvar
+    (by Hugo Heuzard)
+ ** Compiler: static evaluation of constant ("staticeval" optimisation)
+    (by Hugo Heuzard)
+ ** Compiler: Share string constant (by Hugo Heuzard)
+ ** Compiler: Alias primitives (by Hugo Heuzard)
+ ** Compiler: Complete javacript ast (by Hugo Heuzard)
+ ** Compiler: 'caml_format_int %d x' compiles to ""+x (by Hugo Heuzard)
+ ** add javascript file in META (to be used with ocamlfind)
+    (by Hugo Heuzard)
+ ** add Ocamlbuild plugin js_of_ocaml.ocamlbuild
+    (by Jacques-Pascal Deplaix)
+ ** Add/Install unix.js, classlist.js, weak.js
+ ** Add Url.Current.protocol (by Vicent Balat)
+ ** Dependency: deriving instead of deriving-ocsigen
+ ** Log in case of wrong string encoding (by Hugo Heuzard)
+ ** Add compiler_libs (by Pierre Chambart)
+ ** Add Application Cache (by Marc Simon)
+ ** Compile native syntax extension (by Hugo Heuzard)
+ ** Add a javascript parser (extracted from facebook/pfff)
+   (to be use later)
+
+ * BugFixes
+ ** Compiler: js file is not create in case of error (by Hugo Heuzard)
+ ** Fix compatibility when using type conv (by Hugo Heuzard)
+ ** Fix setTimeout overflow (by Hugo Heuzard)
 
 ===== 1.3 (2012-11-28) =====
 
