--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,7 @@
     (+mypkg/myfile.js will read myfile.js from mypkg findlib directory)
     (by Hugo Heuzard)
  ** Compiler: Add compilation profiles -opt 1 (2 or 3)
-    (1 -> as before ; 2 -> loop until fixpoint ; 3 -> enable experimental optim 
+    (1 -> as before ; 2 -> loop until fixpoint ; 3 -> enable experimental optim
     (by Hugo Heuzard)
  ** Compiler: Improve missing primitives & reserved name detection
     (by Hugo Heuzard)
@@ -30,6 +30,7 @@
  ** Compile native syntax extension (by Hugo Heuzard)
  ** Add a javascript parser (extracted from facebook/pfff)
  ** parsing and minifying external javascript file (ie: runtime)(by Hugo Heuzard)
+ ** remove redundant 'var' (by Hugo Heuzard)
 
  * BugFixes
  ** Compiler: js file is not create in case of error (by Hugo Heuzard)
