--- a/README
+++ b/README
@@ -14,6 +14,7 @@ very stable API.
 
   * Findlib
   * Lwt (**version 2.3.0** at least)
+  * Menhir
 
   [optionnal]
   * deriving (**version 0.5** at least
