--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,7 @@
  ** Compiler: Add variable renaming
  ** Compiler: static evaluation of constant ("staticeval" optimisation)
     (by Hugo Heuzard)
- ** Compiler: Share string constant (by Hugo Heuzard)
+ ** Compiler: Share constant (by Hugo Heuzard)
  ** Compiler: Alias primitives (by Hugo Heuzard)
  ** Compiler: Complete javacript ast (by Hugo Heuzard)
  ** Compiler: 'caml_format_int %d x' compiles to ""+x (by Hugo Heuzard)
@@ -30,7 +30,9 @@
  ** Compile native syntax extension (by Hugo Heuzard)
  ** Add a javascript parser (extracted from facebook/pfff)
  ** parsing and minifying external javascript file (ie: runtime)(by Hugo Heuzard)
- ** remove redundant 'var' (by Hugo Heuzard)
+ ** Compiler: remove redundant 'var' (by Hugo Heuzard)
+ ** Compiler: strict mode enabled
+ ** Compiler: improve compact mode, remove unnecessary space, semicolon
 
  * BugFixes
  ** Compiler: js file is not create in case of error (by Hugo Heuzard)
