--- a/CHANGES
+++ b/CHANGES
@@ -1,12 +1,8 @@
 ===== dev =====
 
  * Features/Changes
- ** Add -linkall option to keep all provided primitives
  ** Compiler: Add javascript file lookup using findlib
     (+mypkg/myfile.js will read myfile.js from mypkg findlib directory)
-    (by Hugo Heuzard)
- ** Compiler: Add compilation profiles -opt 1 (2 or 3)
-    (1 -> as before ; 2 -> loop until fixpoint ; 3 -> enable experimental optim
     (by Hugo Heuzard)
  ** Compiler: Improve missing primitives & reserved name detection
     (by Hugo Heuzard)
@@ -26,7 +22,6 @@
  ** Dependency: deriving instead of deriving-ocsigen
  ** Log in case of wrong string encoding (by Hugo Heuzard)
  ** Add compiler_libs (by Pierre Chambart)
- ** Add Application Cache (by Marc Simon)
  ** Compile native syntax extension (by Hugo Heuzard)
  ** Add a javascript parser (extracted from facebook/pfff)
  ** parsing and minifying external javascript file (ie: runtime)(by Hugo Heuzard)
@@ -37,7 +32,24 @@
  * BugFixes
  ** Compiler: js file is not create in case of error (by Hugo Heuzard)
  ** Fix compatibility when using type conv (by Hugo Heuzard)
- ** Fix setTimeout overflow (by Hugo Heuzard)
+
+===== 1.4 (2013-12-03) =====
+
+ * Features/Changes
+ ** Add missing primitives for OCaml 4.01
+ ** Improved Dom bindings (Hugo Heuzard and many other contributors)
+ ** Add -linkall option to keep all provided primitives (Pierre Chambard)
+ ** Improved tail-call optimization (Hugo Heuzard)
+ ** Added optimization levels: -o {1,2,3} (Hugo Heuzard)
+
+ * Bugfixes
+ ** Fixed some incorrect Dom bindings
+ ** Fixed hypot primitive (Pierre Chambard)
+ ** Fixed tail call optimization bug (some incorrect code was
+    generated when the number of arguments did not match the number of
+    function parameters)
+ ** Fixed a bug with empty strings
+ ** Fixed weak.js (primitives for Weak module)
 
 ===== 1.3 (2012-11-28) =====
 
