--- a/CHANGES
+++ b/CHANGES
@@ -28,10 +28,12 @@
  ** Compiler: remove redundant 'var' (by Hugo Heuzard)
  ** Compiler: strict mode enabled
  ** Compiler: improve compact mode, remove unnecessary space, semicolon
+ ** Runtime: add one-dimensional Bigarray support
 
  * BugFixes
  ** Compiler: js file is not create in case of error (by Hugo Heuzard)
  ** Fix compatibility when using type conv (by Hugo Heuzard)
+ ** Fix md5 : incorrect for string where (length % 64) E 56..59 (by Grégoire Henry)
 
 ===== 1.4 (2013-12-03) =====
 
