--- a/README
+++ b/README
@@ -56,9 +56,11 @@ input/ouput channels, weak references, and most functions of the
 Sys module.  Extra libraries such as Bigarray, Unix, Thread or Str
 are not supported.
 
-Tail call is not optimized in general.  However, self recursive
-functions (when the tail calls are to the function itself) are
-compiled using a loop.
+Tail call is not optimized in general.  However, mutually recursive
+functions are optimized.
+  * self recursive functions (when the tail calls are the function itself) are
+    compiled using a loop.
+  * trampolines are used otherwise.
 
 Recursive modules are not supported at the moment.
 
