--- a/README
+++ b/README
@@ -19,6 +19,7 @@ very stable API.
   [optionnal]
   * deriving (**version 0.6** at least
               see: https://github.com/ocsigen/deriving)
+  * ocp-indent (** to compile the toplevel *)
 
 === Installation ===
 
