--- a/CHANGES
+++ b/CHANGES
@@ -113,7 +113,7 @@
  ** Lots of new dom bindings
  ** WebGL
  ** Typed arrays
- ** Many speed improvement (marshall, strings, regexps)
+ ** Many speed improvement (marshal, strings, regexps)
  ** Many bug fixed
 
  * Compiler:
@@ -139,7 +139,7 @@
 ===== 1.0.7 (2011-11-18) =====
 
  * Bugfixes:
-   ** Deriving_json: fix string (un)marshalling (was broken for byte > 127)
+   ** Deriving_json: fix string (un)marshaling (was broken for byte > 127)
    ** Do not emit string escape sequence \\v (not supported by IE8)
    ** Removed incorrect optimization of !(x < y) into (x >= y)
    ** Allow compilation on win32/msvc
@@ -173,7 +173,7 @@
 
  * Bugfixes:
    ** fix typo in 'greater than or equal to'
-   ** marshalling, unmarshalling and comparison
+   ** marshaling, unmarshaling and comparison
       are not recursive anymore: avoid stack overflow
    ** use custom formatter to pretty print Javascript
       code to avoid newlines where it is forbidden.
