--- a/doc/manual-wiki/menu.wiki
+++ b/doc/manual-wiki/menu.wiki
@@ -2,6 +2,8 @@
 ==[[overview|Overview]]
 ==[[library|Library overview]]
 ==[[bindings|Binding a JS library]]
+==[[linker|Link javascript code]]
+==[[options|Command line options]]
 ==[[performances|Performances]]
 ==Examples
 ===<<a_file src="toplevel/index.html"|An OCaml toplevel running in the browser>>
